Fix validation issues
